--- a/views/error.pug
+++ b/views/error.pug
@@ -3,6 +3,7 @@ block content
     nav.grid-container.portfolio-breadcrumb
         a(href='/') ← Back
         h2 #{error.status} - #{error.message}
+        p #{error.stack}
 
     nav.grid-container.portfolio-breadcrumb
         a(href='/') ← Back 
