--- a/views/about.pug
+++ b/views/about.pug
@@ -7,41 +7,39 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
-        h1 Name
+        h1 Vladimir
 
-        //- Feel free personalize the title below
         p.lead.text-light
           | Full Stack JavaScript Developer.
 
-        //- Replace the boilerplate below with your Elevator pitch below.
+      
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I’m enjoying how coding is helping me stretch, strive, and grow in new ways and apply my systems-thinking 
+            | mindset to solve problems, crush challenges, and continuously learn by doing.
+            | I liked it so much, I decided to dive-in head first and pursue a career in 
+            | full-stack development.I am a recent student at
+            a(href='https://teamtreehouse.com' target='_blank').my-name Team Treehouse's 
+            | Full-Stack Tech Degree program.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
-
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
+          li JavaScript
+          li Node
           li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li SQL
+          li jQuery 
+          li HTML
+          li CSS
+          li PHP
+          li Git 
         h6 Contact Info
 
-        //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 079/347-959
+          li vchagorovski@gmail.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+        a.button.expanded(href='https://www.linkedin.com/in/vladimir-chagorovski-774162157/' target="_blank") LinkedIn
+        a.button.expanded(href='https://github.com/Chagorovski' target="_blank") GitHub
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
-  
+    a(href='/') ← Back 
