--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='https://placehold.it/550x350')
+            img.thumbnail(src='/images/myPicture.jpg')
           .cell.auto
 
             h5 Vladimir Chagorovski
@@ -22,14 +22,14 @@ html(class="no-js" lang="en" dir="ltr")
             p.text-light
               | Full-Stack Developer
 
-            a(href='/about') Learn More →
+            a(href='/about') About me →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
 
-          span.title-bar-title Vladimir
+          span.title-bar-title Vladimir Chagorovski
       block content
         
 
