--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,7 +14,7 @@ html(class="no-js" lang="en" dir="ltr")
         block sidebar
           br
           .cell.shrink
-            img.thumbnail(src='/images/myPicture.jpg')
+            img.thumbnail(src='/static/images/myPicture.jpg')
           .cell.auto
 
             h5 Vladimir Chagorovski
