--- a/views/project.pug
+++ b/views/project.pug
@@ -2,25 +2,30 @@ extends layout.pug
 
 block content 
   nav.grid-container.portfolio-breadcrumb
-    a(href='/') ← Back
+    span
+      a(href='/') ← HOME 
   article.grid-container.portfolio-intro.portfolio-project
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        h1 #{project[id].project_name}
+        h1 #{project.project_name}
 
         p.lead.text-light
-          | #{project[id].description}
+          | #{project.description}
 
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Technologies
 
-        each technology in project[id].technologies
-          ul
-            li= technology
-
-        a.button.expanded(href=`${project[id].live_link}` target='_blank') Live Demo
-        a.button.expanded(href=`${project[id].github_link}` target='_blank') GitHub Repo
+        ul
+        each tech in techs
+          li #{tech}
+        <br>  
+        if project
+          a.button.expanded(href=`${project.live_link}` target="_blank") Live Demo
+          a.button.expanded(href=`${project.github_link}` target="_blank") GitHub Repo
+        <br>  
+    each img in imgs 
+      img.image(src=`${img}`)
     
-    each image in project.image_urls
-        img.image(src=`${image}`)
+  nav.grid-container.portfolio-breadcrumb
+    a(href='/') ← HOME
