--- a/public/css/foundation.css
+++ b/public/css/foundation.css
@@ -4991,7 +4991,10 @@ table.hover:not(.unstriped) tr:nth-of-type(even):hover {
   border: solid 4px #fefefe;
   border-radius: 0;
   box-shadow: 0 0 0 1px rgba(10, 10, 10, 0.2);
-  line-height: 0; }
+  line-height: 0; 
+  -webkit-box-shadow: 4px 6px 17px 1px rgba(0,0,0,0.73); 
+  box-shadow: 4px 6px 17px 1px rgba(0,0,0,0.73);
+}
 
 a.thumbnail {
   transition: box-shadow 200ms ease-out; }
