--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 
 h1,h2,h3,h4,h5,p{
-  font-family: 'Merriweather', serif;
+  font-family: 'Oswald', sans-serif;
 }
 
   h5{
@@ -58,7 +58,7 @@ a:hover{
 
 .portfolio-me{
   padding: 20px;
-  background: #121213;
+  background:#0086b3;
   color: #fff;
   box-shadow: none !important;
 }
